--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -4,24 +4,27 @@
 #   The weight parameter defines the order that the links will appear in.
 
 main:
-  - name: Home
+  - name: About
     url: '#about'
     weight: 10
-  - name: Posts
-    url: '#posts'
+ # - name: Posts
+ #   url: '#posts'
+ #   weight: 20
+  - name: Team
+    url: '#team'
     weight: 20
   - name: Projects
     url: '#projects'
     weight: 30
-  - name: Talks
-    url: '#talks'
-    weight: 40
+ # - name: Talks
+ #   url: '#talks'
+ #   weight: 40
   - name: Publications
-    url: '#featured'
+    url: '#publications'
     weight: 50
-  - name: Contact
-    url: '#contact'
-    weight: 60
+#  - name: Contact
+#    url: '#contact'
+#    weight: 60
 
 # Link to a PDF of your resume/CV from the menu.
 # To enable, copy your resume/CV to `static/uploads/resume.pdf` and uncomment the lines below.
